setting java memory options